# macos_autoraise-rs

./: .gitignore  Cargo.toml  README.md  accessibility.rs  aerospace.rs  build.rs  com.user.autoraise-rs.plist  event_tap.rs  install.sh  main.rs  raiser.rs
.github/workflows/: release.yml
nix-file/: autoraise-rs.nix  default.nix
src/: accessibility.rs  aerospace.rs  border.rs  config.rs  event_tap.rs  main.rs  raiser.rs
